--- a/src/index.css
+++ b/src/index.css
@@ -185,7 +185,7 @@ body {
     }
 
     #about {
-        @apply min-h-screen py-28 2xl:px-0 px-5 container mx-auto;
+        @apply min-h-screen py-28 2xl:px-0 px-5 container mx-auto max-w-screen-xl;
 
         .content {
             @apply grid grid-cols-1 lg:grid-cols-12 gap-5;
