--- a/src/index.css
+++ b/src/index.css
@@ -294,7 +294,7 @@ body {
         }
 
         .content {
-            @apply flex flex-col justify-between items-center container mx-auto relative;
+            @apply flex flex-col max-w-screen-xl justify-between items-center container mx-auto relative;
 
             .arrows {
                 @apply flex items-center justify-between w-full absolute;
@@ -318,7 +318,7 @@ body {
         }
 
         .recipe {
-            @apply flex max-md:flex-col gap-10 md:items-center justify-between w-full lg:absolute bottom-0;
+            @apply flex max-md:flex-col gap-10 md:items-center justify-between w-full lg:absolute bottom-7;
 
             .info {
                 @apply space-y-4 lg:translate-y-20;
